--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
     padding: 0;
     margin: 0;
     color: var(--font-clr);
-    font-family: "Iosevka Slab";
+    font-family: "Iosevka";
     transition: opacity 0.2s ease;
   }
 
