--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
  {
     font-family: "Iosevka";
     font-weight: normal;
-    src: url("../fnt/iosevka.ttf") format("truetype");
+    src: url("../fnt/iosevka.ttf") format("ttf");
  }
 *
   {
